# mempalace

./: .copier-answers.yml  .env.example  .gitignore  .lychee.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PATCHES.md  README.md  README_TEMPLATE.md  REVIEW.md  SECURITY.md  _typos.toml  entities.json  mempalace.yaml  prek.toml  pyproject.toml  zensical.toml
.claude-plugin/: .mcp.json  README.md  marketplace.json  plugin.json
.claude-plugin/hooks/: hooks.json  mempal-sessionstart-hook.sh
.claude-plugin/skills/mempalace/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.md  2-feature.md  3-docs.md  4-change.md  config.yml
.github/workflows/: ci.yml  copier-update.yml  docs.yml  issue-triage.yml  release.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
docs/.overrides/partials/: comments.html
docs/reference/: api.md
hooks/: README.md  mempal_precompact_hook.sh  mempal_save_hook.sh
mempalace/: cli.py  mcp_server.py  miner.py  normalize.py  palace.py  repair.py  sweeper.py
mempalace/backends/: chroma.py
scripts/: check_plugin_version.py  dev-reload.sh  setup_claude.py
src/mempalace/: __init__.py  _startup.py  cli.py  config.py  convo_miner.py  dedup.py  dialect.py  entity_detector.py  entity_registry.py  general_extractor.py  hooks_cli.py  instructions_cli.py  knowledge_graph.py  layers.py  mcp_server.py  migrate.py  miner.py  normalize.py  onboarding.py  palace_graph.py  query_sanitizer.py  repair.py  room_detector_local.py  searcher.py  spellcheck.py  split_mega_files.py
src/mempalace/instructions/: help.md  init.md  mine.md  search.md  status.md
tests/: conftest.py  test_backends.py  test_cli.py  test_config.py  test_convo_miner.py  test_dedup.py  test_dialect.py  test_entity_detector.py  test_entity_registry.py  test_general_extractor.py  test_hooks_cli.py  test_init.py  test_instructions_cli.py  test_interactive.py  test_knowledge_graph.py  test_layers_searcher_palace.py  test_mcp_server.py  test_migrate.py  test_miner.py  test_mining_integration.py  test_normalize.py  test_onboarding.py  test_palace_locks.py  test_query_sanitizer.py  test_repair.py  test_room_detector.py  test_setup_claude.py  test_spellcheck.py  test_split_mega_files.py  test_sweeper.py
